--- a/debian/Makefile.Debian.conf
+++ b/debian/Makefile.Debian.conf
@@ -7,7 +7,7 @@ CLIB_OBJS=iconv.lo
 VERSION_INFO=0:0:0
 
 ### things relative to the lua library part
-LUA_HEADER=iconv.h
+LUA_HEADER=
 LUA_SOURCES=
 LUA_MODNAME=iconv
 LUA_TEST=test_iconv.lua
@@ -18,3 +18,17 @@ PKG_LIBS_PRIVATE=
 PKG_URL=http://lua-iconv.luaforge.net/
 PKG_REQUIRES=
 PKG_CONFLICTS=
+
+### In addition, to gather flexibility, you can set these hooks
+### (called in this order)
+pre-all-hook::
+post-all-hook::
+pre-test-hook::
+pre-lua-dynamic-test-hook::
+pre-dynamic-link-hook::
+pre-app-dynamic-test-hook::
+pre-static-link-hook::
+pre-app-static-test-hook::
+post-test-hook::
+pre-install-hook::
+post-install-hook::
