--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: lua-iconv
 Section: interpreters
 Priority: optional
-Maintainer: Alexandre Erwin Ittner <aittner@netuno.com.br>
+Maintainer: Alexandre Erwin Ittner <aittner@gmail.com>
 Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 5), dpatch, lua5.1-policy-dev (>= 8)
 Standards-Version: 3.7.2
 XS-X-Vcs-svn: svn://svn.debian.org/pkg-lua/packages/lua-iconv
