--- a/debian/control
+++ b/debian/control
@@ -1,26 +1,21 @@
 Source: lua-iconv
 Section: interpreters
 Priority: optional
-Maintainer: Alexandre Erwin Ittner <aittner@gmail.com>
-Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 5), dpatch, lua5.1-policy-dev (>= 8)
-Standards-Version: 3.7.2
-XS-X-Vcs-svn: svn://svn.debian.org/pkg-lua/packages/lua-iconv
+Maintainer: Jon Bernard <jbernard@debian.org>
+Build-Depends: debhelper (>= 7), liblua5.1-dev, lua5.1, pkg-config
+Standards-Version: 3.8.2
+Vcs-Svn: svn://svn.debian.org/pkg-lua/packages/lua-iconv
+Vcs-Browser: http://svn.debian.org/viewsvn/pkg-lua/packages/lua-iconv
+Homepage: http://luaforge.net/projects/lua-iconv/
 
-Package: liblua5.1-iconv
+Package: liblua5.1-iconv0
 Architecture: any
-Depends: ${shlibs:Depends}
-Description: iconv bindings for the Lua Programming Language
-  Lua-iconv is POSIX 'iconv' binding for the Lua Programming Language. It
-  converts a sequence of characters from one codeset into a sequence of
-  corresponding characters in another codeset.
-  Homepage: <http://lua-iconv.luaforge.net/>
-
-Package: liblua5.1-iconv-dev
-Architecture: any
-Depends: liblua5.1-iconv (= ${Source-Version})
-Description: iconv development files for the lua language version 5.1
- This package contains the development files of the iconv lua5.1 bindings,
- useful to create a statically linked binary (like a C application or a
- standalone lua interpreter).
- Documentation is also shipped within this package.
- Homepage: <http://lua-iconv.luaforge.net/>
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: lua5.1
+Conflicts: lua-iconv
+Provides: lua-iconv
+Replaces: lua-iconv
+Description: iconv bindings for the Lua programming language
+ This package provides POSIX 'iconv' bindings for the Lua programming language.
+ It converts a sequence of characters from one codeset into a sequence of
+ corresponding characters in another codeset.
